--- a/mentor-me/src/less/index.less
+++ b/mentor-me/src/less/index.less
@@ -1,33 +1,10 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@import "variables.less";
+@import "mixins.less";
+@import "global.less";
+@import "nav.less";
+@import "footer.less";
+@import "menu.less";
+@import "landing.less";
+@import "sign-up.less";
+@import "login.less";
+@import "home.less";
