--- a/mentor-me/src/css/index.css
+++ b/mentor-me/src/css/index.css
@@ -7,17 +7,21 @@
   pointer-events: none;
 }
 .App-header {
-  background-color: #282c34;
+  background-color: #222222;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #E5F1F9;
 }
 .App-link {
-  color: #61dafb;
+  color: #8AB7E9;
+}
+.App-link:hover {
+  color: #305392;
+  text-decoration: none;
 }
 @keyframes App-logo-spin {
   from {
