--- a/mentor-me/src/less/global.less
+++ b/mentor-me/src/less/global.less
@@ -9,18 +9,22 @@
 }
 
 .App-header {
-    background-color: #282c34;
+    background-color: @DBG_3;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    color: white;
+    color: @LBL_1;
 }
 
 .App-link {
-    color: #61dafb;
+    color: @LBL_4;
+    &:hover {
+        color: @DBL_3;
+        text-decoration: none;
+    }
 }
 
 @keyframes App-logo-spin {
