styled landing page

--- a/mentor-me/src/less/global.less
+++ b/mentor-me/src/less/global.less
@@ -1,17 +1,22 @@
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet');
+@import url('https://fonts.googleapis.com/css?family=Aladin&display=swap" rel="styleshee');
+
 html {
     font-size: 62.5%;
     body {
-        background: @DBG_5;
+        // background: @DBG_5;
+        background: radial-gradient(@DBL_4, @DBL_1);
         .App {
-            width: 320px;
-            height: 568px;
-            border: 1px solid black;
             margin: 0 auto;
-            background: radial-gradient(@DBG_5, @DBG_3);
             color: @LBG_3;
+            font-family: 'Amatic SC', cursive;
+            h1, h2, h3 {
+                font-family: 'Aladin', cursive;
+            }
             p {
                 font-size: 1.6rem;
             }
+
         }
     }
 }
