--- a/mentor-me/src/css/index.css
+++ b/mentor-me/src/css/index.css
@@ -1,16 +1,30 @@
+@font-face {
+  font-family: 'Amatic SC';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Amatic SC Regular'), local('AmaticSC-Regular'), url(https://fonts.gstatic.com/s/amaticsc/v12/TUZyzwprpvBS1izr_vOECuSa.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Aladin';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Aladin Regular'), local('Aladin-Regular'), url(https://fonts.gstatic.com/s/aladin/v7/ZgNSjPJFPrvJV5fF7i38.ttf) format('truetype');
+}
 html {
   font-size: 62.5%;
 }
 html body {
-  background: #373737;
+  background: radial-gradient(#32599F, #013D63);
 }
 html body .App {
-  width: 320px;
-  height: 568px;
-  border: 1px solid black;
   margin: 0 auto;
-  background: radial-gradient(#373737, #222222);
   color: #F2F2F2;
+  font-family: 'Amatic SC', cursive;
+}
+html body .App h1,
+html body .App h2,
+html body .App h3 {
+  font-family: 'Aladin', cursive;
 }
 html body .App p {
   font-size: 1.6rem;
@@ -20,48 +34,247 @@ html body .App p {
 }
 .landing-wrapper h1 {
   margin-top: 70px;
-  margin-bottom: 70px;
-  font-size: 4.6rem;
-  color: #D8E7F8;
+  margin-bottom: 50px;
+  font-size: 6rem;
+  color: #FBFBFB;
+  -webkit-animation: header-animation 0.65s linear;
+  animation: header-animation 0.65s linear;
+}
+@media (min-width: 470px) {
+  .landing-wrapper h1 {
+    font-size: 8rem;
+  }
+}
+@media (min-width: 530px) {
+  .landing-wrapper h1 {
+    font-size: 10rem;
+  }
+}
+@media (min-width: 800px) {
+  .landing-wrapper h1 {
+    margin-top: 120px;
+    font-size: 12rem;
+  }
+}
+@media (min-width: 900px) {
+  .landing-wrapper h1 {
+    margin-top: 160px;
+    font-size: 14rem;
+  }
 }
 .landing-wrapper h4 {
-  color: #67A9ED;
-  font-size: 1.8rem;
-  margin-bottom: 70px;
+  color: #D8E7F8;
+  font-size: 2rem;
+  margin-bottom: 60px;
+}
+@media (min-width: 470px) {
+  .landing-wrapper h4 {
+    font-size: 2.4rem;
+    margin-bottom: 100px;
+  }
+}
+@media (min-width: 530px) {
+  .landing-wrapper h4 {
+    font-size: 2.4rem;
+    margin-bottom: 130px;
+  }
+}
+@media (min-width: 530px) {
+  .landing-wrapper h4 {
+    font-size: 2.8rem;
+    margin-bottom: 160px;
+  }
 }
 .landing-wrapper p {
-  color: #FEC270;
+  color: #FB902E;
 }
 .landing-wrapper button {
   font-size: 2.6rem;
   border-radius: 0.6rem;
 }
+@media (min-width: 470px) {
+  .landing-wrapper button {
+    font-size: 3rem;
+  }
+}
+@media (min-width: 530px) {
+  .landing-wrapper button {
+    font-size: 3.4rem;
+  }
+}
+.landing-wrapper button:hover {
+  font-size: 3rem;
+}
+@media (min-width: 470px) {
+  .landing-wrapper button:hover {
+    font-size: 3.4rem;
+  }
+}
+@media (min-width: 530px) {
+  .landing-wrapper button:hover {
+    font-size: 3.8rem;
+  }
+}
 .landing-wrapper .headline {
   margin: 0 30px;
 }
 .landing-wrapper .signup-btn {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 .landing-wrapper .signup-btn button {
-  color: #A2040E;
+  color: #780207;
   background: #DF6668;
-  border-color: #A2040E;
+  border-color: #780207;
 }
 .landing-wrapper .signup-btn button:hover {
   color: #DF6668;
-  background: #A2040E;
+  background: #780207;
   border-color: #DF6668;
+  -webkit-animation: sign-up-animation 0.4s linear;
+  animation: sign-up-animation 0.4s linear;
 }
 .landing-wrapper .login-prompt {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
+}
+.landing-wrapper .login-btn {
+  margin-bottom: 50px;
+}
+@media (min-width: 470px) {
+  .landing-wrapper .login-btn {
+    margin-bottom: 70px;
+  }
+}
+@media (min-width: 530px) {
+  .landing-wrapper .login-btn {
+    margin-bottom: 160px;
+  }
+}
+@media (min-width: 800px) {
+  .landing-wrapper .login-btn {
+    margin-bottom: 180px;
+  }
 }
 .landing-wrapper .login-btn button {
-  color: #177F30;
+  color: #42581A;
   background: #94CE9C;
-  border-color: #177F30;
+  border-color: #42581A;
 }
 .landing-wrapper .login-btn button:hover {
   color: #94CE9C;
-  background: #177F30;
+  background: #42581A;
   border-color: #94CE9C;
+  -webkit-animation: login-animation 0.4s linear;
+  animation: login-animation 0.4s linear;
+}
+@-webkit-keyframes sign-up-animation {
+  from {
+    color: #A2040E;
+    background: #DF6668;
+    border-color: #A2040E;
+  }
+  to {
+    color: #DF6668;
+    background: #A2040E;
+    border-color: #DF6668;
+  }
+  0% {
+    -webkit-transform: scale(1) rotateZ(0);
+  }
+  50% {
+    -webkit-transform: scale(1.6) rotateZ(180deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateZ(360deg);
+  }
+}
+@keyframes sign-up-animation {
+  from {
+    color: #A2040E;
+    background: #DF6668;
+    border-color: #A2040E;
+  }
+  to {
+    color: #DF6668;
+    background: #A2040E;
+    border-color: #DF6668;
+  }
+  0% {
+    transform: scale(1) rotateZ(0);
+  }
+  50% {
+    transform: scale(1.6) rotateZ(180deg);
+  }
+  100% {
+    transform: scale(1) rotateZ(360deg);
+  }
+}
+@-webkit-keyframes login-animation {
+  from {
+    color: #177F30;
+    background: #94CE9C;
+    border-color: #177F30;
+  }
+  to {
+    color: #94CE9C;
+    background: #177F30;
+    border-color: #94CE9C;
+  }
+  0% {
+    -webkit-transform: scale(1) rotateZ(0);
+  }
+  50% {
+    -webkit-transform: scale(1.6) rotateZ(180deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateZ(360deg);
+  }
+}
+@keyframes login-animation {
+  from {
+    color: #177F30;
+    background: #94CE9C;
+    border-color: #177F30;
+  }
+  to {
+    color: #94CE9C;
+    background: #177F30;
+    border-color: #94CE9C;
+  }
+  0% {
+    transform: scale(1) rotateZ(0);
+  }
+  50% {
+    transform: scale(1.6) rotateZ(180deg);
+  }
+  100% {
+    transform: scale(1) rotateZ(360deg);
+  }
+}
+@-webkit-keyframes header-animation {
+  0% {
+    -webkit-transform: rotateZ(0);
+    margin-left: 100%;
+  }
+  70% {
+    -webkit-transform: rotateZ(45deg);
+    margin-left: 0;
+  }
+  100% {
+    -webkit-transform: rotateZ(0);
+    margin-left: 0;
+  }
+}
+@keyframes header-animation {
+  0% {
+    transform: rotateZ(0);
+    margin-left: 100%;
+  }
+  75% {
+    transform: rotateZ(45deg);
+    margin-left: -20%;
+  }
+  100% {
+    transform: rotateZ(0);
+    margin-left: 0;
+  }
 }
