--- a/mentor-me/src/less/landing.less
+++ b/mentor-me/src/less/landing.less
@@ -2,51 +2,220 @@
     text-align: center;
     h1 {
         margin-top: 70px;
-        margin-bottom: 70px;
-        font-size: 4.6rem;
-        color: @LBL_2;
+        margin-bottom: 50px;
+        font-size: 6rem;
+        color: @LBG_2;
+        -webkit-animation: header-animation 0.65s linear;
+                animation: header-animation 0.65s linear;
+        @media (min-width: 470px) {
+            font-size: 8rem;
+        }
+        @media (min-width: 530px) {
+            font-size: 10rem;
+        }
+        @media (min-width: 800px) {
+            margin-top: 120px;
+            font-size: 12rem;
+        }
+        @media (min-width: 900px) {
+            margin-top: 160px;
+            font-size: 14rem;
+        }
     }
     h4 {
-        color: @LBL_5;
-        font-size: 1.8rem;
-        margin-bottom: 70px;
+        color: @LBL_2;
+        font-size: 2rem;
+        margin-bottom: 60px;
+        @media (min-width: 470px) {
+            font-size: 2.4rem;
+            margin-bottom: 100px;
+        }
+        @media (min-width: 530px) {
+            font-size: 2.4rem;
+            margin-bottom: 130px;
+        }
+        @media (min-width: 530px) {
+            font-size: 2.8rem;
+            margin-bottom: 160px;
+        }
     }
     p {
-        color: @LYO_4;
+        color: @DYO_3;
     }
     button {
         font-size: 2.6rem;
         border-radius: 0.6rem;
+        @media (min-width: 470px) {
+            font-size: 3rem;
+        }
+        @media (min-width: 530px) {
+            font-size: 3.4rem;
+        }
+        &:hover {
+            font-size: 3rem;
+            @media (min-width: 470px) {
+                font-size: 3.4rem;
+            }
+            @media (min-width: 530px) {
+                font-size: 3.8rem;
+            }
+        }
     }
     .headline {
         margin: 0 30px;
     }
     .signup-btn {
-        margin-bottom: 30px;
+        margin-bottom: 10px;
         button {
-            color: @DRD_2;
+            color: @DRD_1;
             background: @LRD_4;
-            border-color: @DRD_2;
+            border-color: @DRD_1;
             &:hover {
                 color: @LRD_4;
-                background: @DRD_2;
+                background: @DRD_1;
                 border-color: @LRD_4;
+                -webkit-animation: sign-up-animation 0.4s linear;
+                        animation: sign-up-animation 0.4s linear;
             }
         }
     }
     .login-prompt {
-        margin-bottom: 30px;
+        margin-bottom: 10px;
     }
     .login-btn {
+        margin-bottom: 50px;
+        @media (min-width: 470px) {
+            margin-bottom: 70px;
+        }
+        @media (min-width: 530px) {
+            margin-bottom: 160px;
+        }
+        @media (min-width: 800px) {
+            margin-bottom: 180px;
+        }
         button {
-            color: @DGR_2;
+            color: @DGR_1;
             background: @LGR_4;
-            border-color: @DGR_2;
+            border-color: @DGR_1;
             &:hover {
                 color: @LGR_4;
-                background: @DGR_2;
+                background: @DGR_1;
                 border-color: @LGR_4;
+                -webkit-animation: login-animation 0.4s linear;
+                        animation: login-animation 0.4s linear;
             }
         }
+    }
+}
+@-webkit-keyframes sign-up-animation {
+    from {
+        color: @DRD_2;
+        background: @LRD_4;
+        border-color: @DRD_2;
+    }
+    to {
+        color: @LRD_4;
+        background: @DRD_2;
+        border-color: @LRD_4;
+    }
+    0% {
+        -webkit-transform: scale(1) rotateZ(0);
+    }
+    50% {
+        -webkit-transform: scale(1.6) rotateZ(180deg);
+    }
+    100% {
+        -webkit-transform: scale(1) rotateZ(360deg);
+    }
+}
+@keyframes sign-up-animation {
+    from {
+        color: @DRD_2;
+        background: @LRD_4;
+        border-color: @DRD_2;
+    }
+    to {
+        color: @LRD_4;
+        background: @DRD_2;
+        border-color: @LRD_4;
+    }
+    0% {
+        transform: scale(1) rotateZ(0);
+    }
+    50% {
+        transform: scale(1.6) rotateZ(180deg);
+    }
+    100% {
+        transform: scale(1) rotateZ(360deg);
+    }
+}
+@-webkit-keyframes login-animation {
+    from {
+        color: @DGR_2;
+        background: @LGR_4;
+        border-color: @DGR_2;
+    }
+    to {
+        color: @LGR_4;
+        background: @DGR_2;
+        border-color: @LGR_4;
+    }
+    0% {
+        -webkit-transform: scale(1) rotateZ(0);
+    }
+    50% {
+        -webkit-transform: scale(1.6) rotateZ(180deg);
+    }
+    100% {
+        -webkit-transform: scale(1) rotateZ(360deg);
+    }
+}
+@keyframes login-animation {
+    from {
+        color: @DGR_2;
+        background: @LGR_4;
+        border-color: @DGR_2;
+    }
+    to {
+        color: @LGR_4;
+        background: @DGR_2;
+        border-color: @LGR_4;
+    }
+    0% {
+        transform: scale(1) rotateZ(0);
+    }
+    50% {
+        transform: scale(1.6) rotateZ(180deg);
+    }
+    100% {
+        transform: scale(1) rotateZ(360deg);
+    }
+}
+@-webkit-keyframes header-animation {
+    0% {
+        -webkit-transform: rotateZ(0);
+        margin-left: 100%;
+    }
+    70% {
+        -webkit-transform: rotateZ(45deg);
+        margin-left: 0;
+    }
+    100% {
+        -webkit-transform: rotateZ(0);
+        margin-left: 0;
+    }
+}
+@keyframes header-animation {
+    0% {
+        transform: rotateZ(0);
+        margin-left: 100%;
+    }
+    75% {
+        transform: rotateZ(45deg);
+        margin-left: -20%;
+    }
+    100% {
+        transform: rotateZ(0);
+        margin-left: 0;
     }
 }
