--- a/mentor-me/src/less/nav.less
+++ b/mentor-me/src/less/nav.less
@@ -12,6 +12,9 @@
                 justify-content: space-between;
             }
         }
+        @media (min-width: 500px) {
+            height: 50px;
+        }
         @media (min-width: 1000px) {
             justify-content: space-between;
         }
@@ -57,7 +60,7 @@
         }
         .nav-logo {
             h3 {
-                padding: 10px 10px;
+                padding: 7px 10px;
                 font-size: 3rem;
                 color: @LBG_2;
                 &:hover {
