--- a/mentor-me/src/less/index.less
+++ b/mentor-me/src/less/index.less
@@ -3,8 +3,8 @@
 @import "global.less";
 @import "nav.less";
 @import "footer.less";
-@import "menu.less";
 @import "landing.less";
 @import "sign-up.less";
 @import "login.less";
 @import "home.less";
+@import "profile.less";
