--- a/mentor-me/src/less/nav.less
+++ b/mentor-me/src/less/nav.less
@@ -1,4 +1,8 @@
 .nav-wrapper {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 300;
     nav {
         display: flex;
         justify-content: space-around;
