updated home page

--- a/mentor-me/src/less/global.less
+++ b/mentor-me/src/less/global.less
@@ -4,9 +4,9 @@
 html {
     font-size: 62.5%;
     body {
-        // background: @DBG_5;
-        background: radial-gradient(@DBL_4, @DBL_1);
+
         .App {
+            background: red;
             margin: 0 auto;
             color: @LBG_3;
             font-family: 'Amatic SC', cursive;
