--- a/mentor-me/src/less/landing.less
+++ b/mentor-me/src/less/landing.less
@@ -4,7 +4,7 @@
         margin-top: 70px;
         margin-bottom: 50px;
         font-size: 6rem;
-        color: @LBG_2;
+        color: red;
         -webkit-animation: header-animation 0.65s linear;
                 animation: header-animation 0.65s linear;
         @media (min-width: 470px) {
