--- a/mentor-me/src/less/profile.less
+++ b/mentor-me/src/less/profile.less
@@ -38,6 +38,7 @@
     }
     .profile-bar-wrapper {
         display: flex;
+        justify-content: center;
         margin-top: 30px;
         background: @DBL_1;
         img {
