--- a/mentor-me/src/less/nav.less
+++ b/mentor-me/src/less/nav.less
@@ -37,12 +37,18 @@
         }
         .burger2 {
             display: none;
-            margin: 0 auto;
-            div {
-                width: 200px;
+            justify-content: center;
+            .b2-wrapper{
+                display: flex;
+            }
+            .line {
+                width: 80px;
                 height: 1px;
                 background-color: @LBG_2;
-                margin: 5px 0;
+                margin: 10px 0 0 0;
+            }
+            h3 {
+                font-size: 2rem;
             }
         }
         .nav-links {
@@ -77,7 +83,7 @@
             display: none;
         }
         .active {
-            display: block;
+            display: flex;
         }
         .logo-center {
             justify-content: center;
